# aoc

./: .gitignore  Makefile  README.md  main.s
2024/: README.md
2024/02/: Makefile  main.cbl  part1.cbl
2024/03/: Makefile  main.erl  part1.erl
2024/04/: p04.cabal
2024/04/app/: Main.hs
2024/05/: 05.lsp  part1.lsp
2024/06/: 06.tcl  part1.tcl
2024/07/: Makefile
2024/07/main/: main.fork
2024/07/part1/: main.fork
2024/08/: fpm.toml
2024/08/app/: main.f90
2024/09/: Makefile  main.pas
2024/10/: 10.lua
2024/11/: CMakeLists.txt  hashtable.c  hashtable.h  main.c
2024/12/: 12.jl
2024/13/: 13.ps1
2024/14/: build.zig  build.zig.zon
2024/14/src/: main.zig
2024/15/: 15.scala  part1.scala
2024/16/: main.vala  meson.build
2024/17/: 17.php  part1.php
2024/18/: .gitignore  dub.json
2024/18/source/: app.d
2024/19/: 19.rb
2024/20/: go.mod  main.go  part1.go.bak
2024/21/: Package.swift
2024/21/Sources/: main.swift
2024/22/: 22.pl
2024/23/: p23.nimble
2024/23/src/: p23.nim
2024/24/: .gitignore  CMakeLists.txt  main.cc  part1.cc
2024/25/: 25.ts
2025/: README.md
2025/01/: alire.toml  p01.gpr
2025/01/src/: p01.adb
2025/02/: 02.tcl
2025/03/: build.zig  build.zig.zon
2025/03/src/: main.zig
2025/04/: .gitignore  04.slnx  04.vb  04.vbproj
2025/05/: main.erl
2025/06/: dune-project  p06.opam
2025/06/lib/: dune
2025/07/: LICENSE  p07.cabal
2025/07/app/: Main.hs
2025/08/: .gitignore  dub.json
2025/08/source/: app.d
2025/09/: 09.jl
2025/10/: P10.java
